Fixed styling issue where geocoder pushed map down the page. Geocoder now overlaps the map - much neater. Also increased width of address box & increased height of map.

--- a/src/components/Map/styles.css
+++ b/src/components/Map/styles.css
@@ -1,7 +1,12 @@
 .react-geocoder {
-  width: 35%;
+  width: 45%;
   min-width: 200px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  position: absolute;
+  z-index: 500;
 }
 
 .react-geocoder input {
